<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:id="@+id/btone"
        android:text="@string/btone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btwo"
        android:text="@string/btwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvnam"
        android:text="@string/tvname"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>